--- a/priv/Dockerfile.build
+++ b/priv/Dockerfile.build
@@ -1,14 +1,14 @@
-FROM bitwalker/alpine-erlang:6.1
+FROM bitwalker/alpine-erlang:20.1
 
 ENV HOME=/opt/app/ TERM=xterm
 
 # Install Elixir and basic build dependencies
 RUN \
     echo "@edge http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
-    apk update && \
-    apk --no-cache --update add \
+    apk --update upgrade musl && \
++   apk --no-cache add \
       git make g++ \
-      elixir@edge && \
+      elixir@edge=1.5.1 && \
     rm -rf /var/cache/apk/*
 
 # Install Hex+Rebar
