--- a/priv/Dockerfile.build
+++ b/priv/Dockerfile.build
@@ -6,7 +6,7 @@ ENV HOME=/opt/app/ TERM=xterm
 RUN \
     echo "@edge http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
     apk --update upgrade musl && \
-+   apk --no-cache add \
+    apk --no-cache add \
       git make g++ \
       elixir@edge=1.5.1 && \
     rm -rf /var/cache/apk/*
