change images to alpine-elixir

--- a/priv/Dockerfile.build
+++ b/priv/Dockerfile.build
@@ -1,19 +1,19 @@
-FROM bitwalker/alpine-erlang:20.1
+FROM bitwalker/alpine-elixir:1.5.2
 
 ENV HOME=/opt/app/ TERM=xterm
 
 # Install Elixir and basic build dependencies
-RUN \
-    echo "@edge http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
-    apk --update upgrade musl && \
-    apk --no-cache add \
-      git make g++ \
-      elixir@edge=1.5.2-r0 && \
-    rm -rf /var/cache/apk/*
-
+# RUN \
+#   echo "@edge http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
+#    apk --update upgrade musl && \
+#    apk --no-cache add \
+#      git make g++ \
+#      elixir@edge=1.5.2-r0 && \
+#    rm -rf /var/cache/apk/*
+#
 # Install Hex+Rebar
-RUN mix local.hex --force && \
-    mix local.rebar --force
+# RUN mix local.hex --force && \
+#    mix local.rebar --force
 
 WORKDIR /opt/app
 
