--- a/priv/Dockerfile.release
+++ b/priv/Dockerfile.release
@@ -1,8 +1,8 @@
-FROM bitwalker/alpine-erlang:20.1
+FROM bitwalker/alpine-elixir:1.5.2
 
-RUN apk update && \
-    apk --no-cache --update add libgcc libstdc++ && \
-    rm -rf /var/cache/apk/*
+# RUN apk update && \
+#   apk --no-cache --update add libgcc libstdc++ && \
+#    rm -rf /var/cache/apk/*
 
 EXPOSE 4000
 ENV PORT=4000 MIX_ENV=prod REPLACE_OS_VARS=true SHELL=/bin/sh
