--- a/priv/Dockerfile.build
+++ b/priv/Dockerfile.build
@@ -15,6 +15,8 @@ ENV HOME=/opt/app/ TERM=xterm
 # RUN mix local.hex --force && \
 #    mix local.rebar --force
 
+RUN mix do deps.get bcrypt_elixir
+
 WORKDIR /opt/app
 
 ENV MIX_ENV=prod
