--- a/priv/Dockerfile.build
+++ b/priv/Dockerfile.build
@@ -25,9 +25,9 @@ COPY . .
 # Cache elixir deps
 # RUN mkdir config
 # COPY config/* config/
-# COPY mix.exs mix.lock ./
+COPY mix.exs mix.lock ./
 
-RUN mix do deps.get bcrypt_elixir, deps.update bcrypt_elixir, deps.compile bcrypt_elixir
+/*RUN mix do deps.get bcrypt_elixir, deps.update bcrypt_elixir, deps.compile bcrypt_elixir*/
 RUN mix do deps.get, deps.compile
 
 RUN mix release --env=prod --verbose
