--- a/priv/Dockerfile.build
+++ b/priv/Dockerfile.build
@@ -1,15 +1,28 @@
-FROM bitwalker/alpine-erlang:19.3.4
+FROM bitwalker/alpine-elixir:1.5.2
 
-ENV HOME=/opt/app/ TERM=xterm
+# Important!  Update this no-op ENV variable when this Dockerfile
+# is updated with the current date. It will force refresh of all
+# of the base images and things like `apt-get update` won't be using
+# old cached versions when the Dockerfile is built.
+ENV REFRESHED_AT=2017-07-26 \
+    # Set this so that CTRL+G works properly
+    TERM=xterm
 
-# Install Elixir and basic build dependencies
+# Install NPM
 RUN \
-    echo "@edge http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
-    apk --update upgrade musl && \
-    apk --no-cache add \
-      git make g++ \
-      elixir@edge=1.4.2-r0 && \
+    mkdir -p /opt/app && \
+    chmod -R 777 /opt/app && \
+    apk update && \
+    apk --no-cache --update add \
+      git make g++ wget curl inotify-tools \
+      nodejs nodejs-current-npm && \
+    npm install npm -g --no-progress && \
+    update-ca-certificates --fresh && \
     rm -rf /var/cache/apk/*
+
+# Add local node module binaries to PATH
+ENV PATH=./node_modules/.bin:$PATH \
+    HOME=/opt/app
 
 # Install Hex+Rebar
 RUN mix local.hex --force && \
@@ -26,5 +39,6 @@ COPY . .
 # COPY mix.exs mix.lock ./   -- REMOVED for umbrella project compatibility
 
 RUN mix do deps.get, deps.compile
+
 
 RUN mix release --env=prod --verbose
