--- a/priv/Dockerfile.release
+++ b/priv/Dockerfile.release
@@ -1,4 +1,4 @@
-FROM bitwalker/alpine-erlang:19.3.4
+FROM bitwalker/alpine-elixir:1.5.2
 
 RUN apk update && \
     apk --no-cache --update add libgcc libstdc++ && \
