--- a/priv/Dockerfile.build
+++ b/priv/Dockerfile.build
@@ -5,12 +5,14 @@ FROM bitwalker/alpine-elixir:1.6.4
 # of the base images and things like `apt-get update` won't be using
 # old cached versions when the Dockerfile is built.
 
+RUN apk upgrade
+
 RUN \
     mkdir -p /opt/app && \
     chmod -R 777 /opt/app && \
     apk update && \
     apk --no-cache --update add \
-      git make g++ wget curl inotify-tools \
+      git make g++ wget curl inotify-tools && \
     rm -rf /var/cache/apk/*
 
 # Add local node module binaries to PATH
